syntax = "proto3";
package credential_service;

import "state.proto";
import "credential.proto";

/// Workaround for issue https://github.com/level11consulting/orbitalci/issues/229
/// We've split CredentialSerivice out of credential.proto because it appeared that 
/// importing `credential.proto` in `organization.proto` was generating the wrong code.

/// None of `credential.proto`'s types would generate in `organization.rs`, but all of the
/// server and client code would generate, and look for their types, and fail compilation.

service CredentialService {
    rpc CreateVcsCred(credential.VcsCredCreateRequest) returns (credential.VcsCredEntry);
    rpc DeleteVcsCred(credential.VcsCredDeleteRequest) returns (credential.VcsCredEntry);
    rpc UpdateVcsCred(credential.VcsCredUpdateRequest) returns (credential.VcsCredEntry);
    rpc ListVcsCreds(credential.VcsCredListRequest) returns (credential.VcsCredListResponse);
}