syntax = "proto3";
package integration;

import "state.proto";

// Integrations are pieces of data that passed, or integrated, into a build container, such as:
//    * Environment Variables
//    * Secrets such as passwords or encryption keys
//    * notification callbacks
//    * API keys for registries like docker, nexus, helm, etc

enum SecretType {
    SECRET_TYPE_UNSPECIFIED = 0;
    DOCKER_REGISTRY = 1;
    NPM_REPO = 2;
    PYPI_REGISTRY = 3;
    MAVEN_REPO = 4;
    SSH_PEM = 5;
    HELP_REPO = 6;
    KUBERNETES = 7;
    APPLE_DEVELOPER = 8;
    ENV_VAR = 9;
    FILE = 10;
}

enum NotifyType {
    NOTIFY_TYPE_UNSPECIFIED = 0;
    SLACK = 1;
    WEBHOOK = 2;
}

// Server returns SecretIntegrationEntry as response
message SecretIntegrationCreateRequest {
    string org = 1;
    SecretType secret_type = 2;
    string secret = 3;
}

message SecretIntegrationEntry {
    int32 id = 1;
    int32 org_id = 2;
    SecretType secret_type = 3;
    state.ActiveState active_state = 4;
}

// Server returns SecretIntegrationEntry as response
message SecretIntegrationDeleteRequest {
    string org = 1;
    SecretType secret_type = 2;
}

// Server returns SecretIntegrationEntry as response
message SecretIntegrationUpdateRequest {
    string org = 1;
    SecretType secret_type = 2;
    string secret = 3;
    state.ActiveState active_state = 4;
}

// Server returns SecretIntegrationListResponse
message SecretIntegrationListRequest {
    string org = 1;
    SecretType secret_type = 2;
}

message SecretIntegrationListResponse {
    repeated SecretIntegrationEntry secret_integreation_entries = 1;
}

// Server returns SecretIntegrationEntry as response
message NotifyIntegrationCreateRequest {
    string org = 1;
    NotifyType notify_type = 2;
    string secret = 3;
    state.ActiveState active_state = 4;
}

// Server returns SecretIntegrationEntry as response
message NotifyIntegrationEntry {
    int32 id = 1;
    int32 org_id = 2;
    NotifyType notify_type = 3;
    state.ActiveState active_state = 4;
}

// Server returns SecretIntegrationEntry as response
message NotifyIntegrationDeleteRequest {
    string org = 1;
    NotifyType notify_type = 2;
}

// Server returns SecretIntegrationEntry as response
message NotifyIntegrationUpdateRequest {
    string org = 1;
    NotifyType notify_type = 2;
    string secret = 3;
    state.ActiveState active_state = 4;
}

// Server returns NotifyIntegrationListResponse
message NotifyIntegrationListRequest {
    string org = 1;
    NotifyType notify_type = 2;
}

message NotifyIntegrationListResponse {
    repeated NotifyIntegrationEntry notify_integration_entries = 1;
}

service IntegrationService {
    rpc CreateSecretIntegration(SecretIntegrationCreateRequest) returns (SecretIntegrationEntry);
    rpc DeleteSecretIntegration(SecretIntegrationDeleteRequest) returns (SecretIntegrationEntry);
    rpc UpdateSecretIntegration(SecretIntegrationUpdateRequest) returns (SecretIntegrationEntry);
    rpc ListSecretIntegrations(SecretIntegrationListRequest) returns (SecretIntegrationListResponse);
    rpc CreateNotifyIntegration(NotifyIntegrationCreateRequest) returns (NotifyIntegrationEntry);
    rpc DeleteNotifyIntegration(NotifyIntegrationDeleteRequest) returns (NotifyIntegrationEntry);
    rpc UpdateNotifyIntegration(NotifyIntegrationUpdateRequest) returns (NotifyIntegrationEntry);
    rpc ListNotifyIntegrations(NotifyIntegrationListRequest) returns (NotifyIntegrationListResponse);
}
